Ajout de la gestion des logs administratifs avec l'entité AdminLogEntity et le service AdminAuditService pour l'audit des actions des administrateurs. Mise à jour des ressources AdminUserResource et MeResource pour intégrer l'audit lors des actions de suspension et d'activation des utilisateurs. Ajout de la gestion des images uploadées avec les entités UploadedImageEntity et les services associés pour la validation et l'enregistrement des fichiers dans S3. Mise à jour des configurations et des migrations de base de données pour supporter ces nouvelles fonctionnalités.